POST cart handler
