# backend/internal/routes/routes.go
@@ -21,4 +21,5 @@ func SetupRoutes(app *fiber.App) {
 	app.Post("/campaign-categories", handlers.AddCampaignCategory)
 	app.Get("/campaign-categories", handlers.GetCampaignCategories)
 	app.Post("/cart", handlers.AddCartItem)
+	app.Get("/cart/:user_id", handlers.GetCartItems)
 }
